<resources>
    <string name="app_name">Dentiva</string>
    <string name="logo_image">Logo Image</string>
    <string name="hello">Hello</string>
    <string name="Wellcome">Wellcome..</string>
    <string name="textWellcome">Dentiva, the innovative solution for comprehensive dental health. Get ready to transform how you care for your teeth and prevent dental diseases with cutting-edge technology.</string>
    <string name="login">Login</string>
    <string name="continueWithGoogle">Continue With Google</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="let_s_create_your_account">Let\'s Create Your\nAccount</string>
    <string name="image_icon">Image Icon</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="Email">Email</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="pass_less_than_8_char">Password less than 8 characters</string>
    <string name="I_agree_to_the">I agree to the</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and">and</string>
    <string name="already_have_an_account">Already have account?</string>
    <string name="login_with_your_account">Login with your acount</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>
    <string name="Logout">Logout</string>
    <string name="good_morning">Good Morning..</string>
    <string name="username">Kevin Willam</string>
    <string name="notification">Notification</string>
    <string name="image_profile">Image Profile</string>
    <string name="smart_reminder">Smart Reminder</string>
    <string name="let_s_clean_your_tooth">Let’s clean your tooth</string>
    <string name="alarm">Alarm</string>
    <string name="brush_your_tooth_in">Brush your tooth in</string>
    <string name="_07_hours_23_minutes">07 hours 23 minutes</string>
    <string name="dental_treatment_schedule">Dental treatment schedule</string>
    <string name="sat_july_27">Sat July 27</string>
    <string name="days_count">34 days from now</string>
    <string name="view_all">View all</string>
    <string name="category">Category</string>
    <string name="doctor_picture">Doctor Picture</string>
    <string name="doctor_name">Dr. Jack Marco Smith</string>
    <string name="address">Jl. Pahlawan Revolusi C No.8B,</string>
    <string name="number">+62-829181092</string>
    <string name="rating">4.4 star rating</string>
    <string name="location_icon">Location Icon</string>
    <string name="vector_category">Vector Category</string>
    <string name="braces">Braces</string>
    <string name="check_up">Check up</string>
    <string name="extraction">Extraction</string>
    <string name="cleaning">Cleaning</string>
    <string name="doctor_location">Doctor Location</string>
    <string name="dashboard">Dashboard</string>
    <string name="scan">Scan</string>
    <string name="article">Article</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_upload_amp_scan_your_image"><![CDATA[Let’s upload & scan your image]]></string>
    <string name="dentiva_will_help_you_scanning_it">Dentiva will help you scanning it</string>
    <string name="image_scan">Image Scan</string>
    <string name="select_or_capture_your_image">Select or capture your image</string>
    <string name="icon_files">Icon Files</string>
    <string name="gallery">Galery</string>
    <string name="camera">Camera</string>
    <string name="profile_image">Profile Image</string>
    <string name="icon_secure">Secure Icon</string>
    <string name="privacy_and_security">Privacy and security</string>
    <string name="icon_setting">Setting Icon\n</string>
    <string name="settings">Settings</string>
    <string name="enter">Enter</string>
    <string name="icon_support">Support Icon\n</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="icon_logout">Logout Icon</string>
    <string name="no_data_received">No data received</string>
    <string name="unable_to_fetch_location">Unable to fetch location. Please ensure location services are enabled.</string>
    <string name="refresh">Refresh</string>
    <string name="icon_refresh">Icon Refresh</string>
    <string name="confirm_to_upload">Confirm to upload</string>
    <string name="selected_image">Selected Image</string>
    <string name="analyze_result">Analyze Result</string>
    <string name="jenis_penyakit">Jenis Penyakit</string>
    <string name="suggestion">Suggestion</string>
    <string name="accuracy">Accuraion</string>
    <string name="type_of_disease">Type of disease</string>
</resources>